# snippets

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  justfile  seed.hurl
database/: Cargo.toml
database/migrations/: 20241015213625_init.down.sql  20241015213625_init.up.sql
database/src/: lib.rs
frontend/: astro.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/search/: page.tsx
frontend/app/snippet/view/: page.tsx
frontend/app/snippets/: page.tsx
frontend/app/snippets/create/: page.tsx
frontend/components/general/: navBar.tsx  searchBar.tsx
frontend/components/main/: hero.tsx
frontend/components/snippets/: searchResult.tsx  searchResults.tsx  snippet.tsx  snippetList.tsx
frontend/lib/: snippets.ts  types.d.ts
frontend/lib/hooks/: snippets.ts
frontend/src/components/: Snippet.astro
frontend/src/layouts/: Layout.astro
frontend/src/lib/: fetcher.ts  snippets.ts  types.d.ts
frontend/src/pages/: index.astro
frontend/src/pages/snippets/: create.astro
search/: Cargo.toml
search/src/: lib.rs
webservice/: Cargo.toml
webservice/src/: router.rs  state.rs
webservice/src/endpoints/: snippets.rs
