[package]
name = "webservice"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "webservice"
path = "src/bin/main.rs"

[dependencies]
axum = "0.7.7"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
shuttle-shared-db = { version = "0.48.0", features = ["postgres"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

database = { path = "../database" }
search = { path = "../search" }
serde = { version = "1.0.210", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
